<resources>
    <string name="app_name">MapsTrial</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">home</string>
    <string name="already_tracking">Already tracking</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="tracking">Tracking</string>
    <string name="distance">Distance : %1$s</string>
    <string name="speed">Speed: %1$s</string>
    <string name="recoins">Re-coins: %1$s</string>
    <string name="stop">Stop</string>
    <string name="err_min_distance">distance should be higher the minimum distance</string>
    <string name="err_average_lower">Average speed should be bigger then minimum threshold</string>
    <string name="err_average_upper">Average speed should be lower then maximum threshold</string>
    <string name="err_dialog_title">Error</string>
    <string name="finish_recoins">Re-coins earned: %1$s</string>
    <string name="finish_average_speed">Your average speed was: %1$s</string>
    <string name="finish_distance">Your final distance was: %1$s</string>
    <string name="done_tracking">Done tracking!</string>
    <string name="got_it">Got it!</string>

</resources>
