<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/distance"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/finish_distance"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/speed"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/finish_average_speed"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/recoins"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/finish_recoins"
        android:textAlignment="center" />

</RelativeLayout>