<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nitzandev.mapstrial.TrackActivity">

    <LinearLayout
        android:id="@android:id/inputArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/distance"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/speed"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/recoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/speed"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recoins"
            android:textAlignment="center"
            android:textSize="22sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/stop" />

    <Button
        android:id="@+id/stop"
        style="@android:style/Holo.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/stop" />

    <Button
        android:id="@+id/alive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop"
        android:text="alive?"
        android:visibility="gone" />

</RelativeLayout>
